<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guohao.guokeui.GuokeUIMainActivity">

    <Button
        android:id="@+id/btn_quanquan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="装圈圈"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_Gradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="渐变"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_quanquan"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_Marquee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="跑马灯"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Gradient"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_TimeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="时间滚轮"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Marquee"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="draw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_TimeSpinner"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_hencode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hencoder_draw_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_draw"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_hencode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hencoder_draw_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hencode1"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_hencode3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hencoder_draw_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hencode2"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_hencode4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hencoder_draw_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hencode3"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_hencode5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hencoder_draw_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hencode4"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_hencode6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hencoder_draw_6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hencode5"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_hencode7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hencoder_draw_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hencode6"
        android:layout_marginTop="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>